[package]
name = "google_certs_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
reqwest = {version="0.11.20", features = ["blocking", "json"]}
serde = "1.0.188"
serde_json = "1.0.107"
