[package]
name = "google_certs_oauth"
version = "0.1.0"
edition = "2021"
authors = ["Kwabena Amponsem"]
description = "This is a simple library that helps you decode Google OAuth 2.0 JWT tokens and verify them using Google's public keys."
license = "MIT"
repository = "https://github.com/kbamponsem/google-rust-oauth-lib.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
